# brainfuck

./: .gitmodules  README.md  bfops.h
.github/workflows/: ci.yml
c/: Makefile  bfc.c  bfops.c
haskell/: README.md  brainfuck.cabal  stack.yaml
haskell/app/: Main.hs
haskell/src/: Brainfuck.hs
haskell/src/Brainfuck/: Core.hs  Operators.hs  Util.hs
haskell/test/: BrainfuckSpec.hs
haskell/test/Brainfuck/: UtilSpec.hs
haskell/test/System/IO/: Fake.hs
haskell/test/Test/: Brainfuck.hs
python/: README.md  bf.py  randfile.c
test/: haskell.bats
