cabal-version: 1.12

name:        brainfuck
version:     0.1.0.0
description: A naive implementation of Brainfuck in Haskell.
author:      d3adb5
maintainer:  me@d3adb5.net
build-type:  Simple

library
  default-language: Haskell2010
  ghc-options: -Wall -threaded -j
  hs-source-dirs: src

  exposed-modules: Brainfuck

  build-depends:
      base >=4.7 && <5
    , data-default == 0.7.1.1
    , containers == 0.6.4.1
    , ilist == 0.4.0.1

executable brainfuck
  default-language: Haskell2010
  ghc-options: -Wall -threaded -j
  hs-source-dirs: app

  main-is: Main.hs

  build-depends:
      base >=4.7 && <5
    , data-default == 0.7.1.1
    , brainfuck

test-suite brainfuck-test
  default-language: Haskell2010
  ghc-options: -Wall -Wno-orphans -threaded -j
  hs-source-dirs: test

  main-is: Spec.hs
  type: exitcode-stdio-1.0

  build-depends:
      base >=4.7 && <5
    , hspec == 2.8.5
    , QuickCheck == 2.14.2
    , checkers == 0.6.0
    , ilist == 0.4.0.1
    , data-default == 0.7.1.1
    , deepseq == 1.4.5.0
    , directory == 1.3.6.2
    , brainfuck

  other-modules:
      System.IO.Fake
      BrainfuckSpec
